--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   open_file: ^3.3.2
   google_fonts: ^6.1.0
   printing: ^5.11.1
+  animated_splash_screen: ^1.3.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/fonts/OpenSans-Regular.ttf
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
