--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   printing: ^5.11.1
   animated_splash_screen: ^1.3.0
   lottie: ^2.7.0
+  html_editor_enhanced: ^2.5.1
 
 dev_dependencies:
   flutter_test:
