--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   lottie: ^2.7.0
   html_editor_enhanced: ^2.5.1
+  flutter_html: ^3.0.0-beta.2
+  flutter_html_to_pdf: ^0.7.0
 
 dev_dependencies:
   flutter_test:
